--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-localstorage-simple": "^2.1.6",
     "sass-loader": "^7.1.0"
   },
   "scripts": {
