--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/core": "^4.1.0",
     "@material-ui/icons": "^4.0.1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
